--- a/samples/Qt Console Application/CMakeLists.txt
+++ b/samples/Qt Console Application/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt5Core)
+find_package(Qt5 COMPONENTS Core REQUIRED)
 
 add_executable(${PROJECT_NAME}
     main.cpp
