--- a/samples/C project/CMakeLists.txt
+++ b/samples/C project/CMakeLists.txt
@@ -2,4 +2,6 @@ cmake_minimum_required(VERSION 3.5)
 
 project(project LANGUAGES C)
 
-add_executable(${PROJECT_NAME} main.c)
+add_executable(${PROJECT_NAME}
+    main.c
+)
