--- a/samples/C++ project/CMakeLists.txt
+++ b/samples/C++ project/CMakeLists.txt
@@ -5,4 +5,6 @@ project(project LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME}
+    main.cpp
+)
