--- a/stylua.toml
+++ b/stylua.toml
@@ -2,3 +2,4 @@ column_width = 200
 indent_type = 'Spaces'
 indent_width = 2
 quote_style = 'AutoPreferSingle'
+collapse_simple_statement = 'FunctionOnly'
